--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
 <h3>My Skills</h3>
 <table cellspacing="10">
   <tr>
-    <td>data analysis</td>
+    <td>DATA ANALYSIS</td>
     <td> ⭐⭐⭐</td>
   </tr>
   <tr>
-    <td>winning rate </td>
+    <td>HTML </td>
     <td>⭐⭐⭐⭐</td>
   </tr>
 <tr>
-  <td>arbitrage</td>
-  <td>⭐⭐⭐⭐</td>
+  <td>CSS</td>
+  <td>⭐</td>
 </tr>
 </table>
 <hr>
