--- a/work-experience.html
+++ b/work-experience.html
@@ -13,15 +13,15 @@
       </thead>
       <tr>
         <td>2015-2017</td>
-        <td>Junior Data Analyst at nairabet limited</td>
+        <td>Junior Data Analyst at Shell cooperation</td>
       </tr>
       <tr>
         <td>2017-2018</td>
-        <td>Intermediate data analyst at bet9ja</td>
+        <td>Intermediate data analyst at KPMG</td>
       </tr>
       <tr>
-        <td>2019-</td> uj
-        <td>Chief data analyst at Sportybet</td>
+        <td>2019-</td>
+        <td>Chief data analyst at Microsoft</td>
       </tr>
     </table>
   </body>
