--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,8 @@
     <input type="checkbox" name="" value=""><br>
     <label for=""> message:</label><br>
     <textarea name="name" rows="10" cols="30"></textarea><br>
+    <label for="">date of birth:</label>
+    <input type="date" name="" value=""><br>
   <input type="submit" name="">
   </form>
   </body>
